# doorhub-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start.py
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 001_init_tables.py  002_add_system_users.py  003_add_user_status.py  004_add_api_secrets.py  005_add_attendance_daily.py  006_add_holiday_calendar.py  007_add_attendance_sync_settings.py  008_add_attendance_rule_settings.py  009_add_attendance_monthly_export_settings.py
app/: deps.py  exceptions.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  attendance_records.py  attendances.py  auth.py  dashboard.py  devices.py  door.py  feishu.py  system_users.py  users.py
app/core/: attendance_sync_manager.py  config.py  holiday_cache_manager.py  runtime.py  scheduler.py  security.py  zk_client.py
app/db/: session.py
app/integrations/feishu/: __init__.py  client.py  handlers.py  longconn.py  router.py  schemas.py
app/models/: __init__.py  api_secret.py  attendance.py  attendance_export_setting.py  attendance_sync_setting.py  device.py  system_user.py  user.py
app/repositories/: __init__.py  api_secret.py  attendance.py  attendance_export_setting.py  device.py  holiday_calendar.py  system_user.py  user.py
app/schemas/: __init__.py  attendance.py  device.py  system_user.py  user.py
app/services/: attendance.py  attendance_record.py  dashboard.py  device.py  door.py  system_user.py  user.py  workday.py
data/: attendance_sync_settings.json  holiday_cache_settings.json
tests/: conftest.py  test_attendances.py  test_auth.py  test_device_schemas.py  test_devices.py  test_users.py
wiki/: API-Reference.md  Architecture.md  Configuration.md  Deployment.md  Development.md  Feishu-Integration.md  Getting-Started.md  Home.md  Roadmap.md  _Sidebar.md
(+2 files in other folders)
